# extract_image_from_video

./: CMakeLists.txt  README.md  main.cpp
